# canopen-lite

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp
network/: socketcan.cpp  socketcan.h
node/: canopen_node.cpp  canopen_node.h  sdo_client.cpp  sdo_client.h
od/: eds.cpp  eds.h  od_array.cpp  od_array.h  od_data.cpp  od_data.h  od_object_dictionary.cpp  od_object_dictionary.h  od_record.cpp  od_record.h  od_variable.cpp  od_variable.h
tests/: eds_test.cc  node_test.cpp  simple_test.cc  socketcan_network_test.cpp
